--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "types",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "noErrorTruncation": true,
     "noImplicitAny": true,
     "outDir": "/dev/null",
